overflow fix

--- a/workspace/src/assets/aboutUs/style.sass
+++ b/workspace/src/assets/aboutUs/style.sass
@@ -11,7 +11,9 @@
 
     & img
         object-fit: cover
+
 .row
+    position: relative
     display: flex
     flex-direction: column
     align-items: center
@@ -24,7 +26,7 @@
     display: none
     z-index: -1
 
-.image-text 
+.image-text
     // text-align: justify
     position: relative
     width: 70%
@@ -53,7 +55,7 @@
     transform: translateX(300px)
 
 @media ( min-width: 758px )
-    .about-us 
+    .about-us
         & .row
             justify-content: space-between
 
@@ -67,8 +69,7 @@
     .img-lg
         height: 34rem
 
-@media (min-width: 1110px) 
+@media (min-width: 1110px)
     .line-svg
         height: 94%
 
-        
